css/basic.css
/* || Global CSS */
:root {
    --site-grey: #53575B;
    --site-blue: #157493;
    --site-dark-blue:#006184;
    --site-black: #212225;
    --site-light-blue: #63B1D7;
    --site-white: #fff;
}

body {
    max-width: 1100px;
    /* align-items: center; */
    text-align: center;
    margin: auto;
    font-family: 'Lato', sans-serif;
}
.page-header {
    color: var(--site-dark-blue);
}




/* || Header */
header{
    display: grid;
    grid-template-columns: .5fr 2fr .5fr 1fr;
    color: var(--site-white);
    background-color: var(--site-blue);
    /* padding-top: 10px; */
}

header img {
    max-width: 120px;
    /* margin: auto; */
}
#social-links {
    display: grid;
    grid-template-rows: 1fr 1fr;
    /* gap: 5px; */
    max-width: 20px;
    margin: 10px;
    /* padding: 1em; */
}
.fa {
    padding: .7em;
    width: 20px;
    height: 20px;
    text-align: center;
    justify-content: center;
    text-decoration: none;
    border-radius: 50%;
    border: solid 1px var(--site-grey);
    margin: auto;
}
.fa-facebook {
    background: #3B5998;
    color: white;
  }
.fa-instagram {
    background: #007bb5;
    color: white;
  }




/* || Nav */
nav {
    margin: 0 auto;
    /* max-width: 760px; */
    font-family: lato, sans-serif;
    width: 100%;
    grid-column: 1/5;
    /* justify-content: center; */
    text-align: center;
    background-color: rgba(61, 61, 61, 0.4)
    /* background-color: var(--site-light-blue); */
}
nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    /* width: 90%; */
}
#hamburgerBtn {
    margin: 0.2rem 2vw;
    background: transparent;
    border: none;
    font-size: 2rem;
    color: white;
    align-content: flex-end;
}
.active {
    /* color: var(--highlight-color); */
    /* text-shadow: 0.1em 0.1em .75em #c8fff8; */
    background-color: rgba(156, 156, 156, 0.807);
}
nav ul li a {
    display: block;
    padding: 0.8rem 2vw;
    text-decoration: none;
    color: white;
    border-top: 1px solid rgba(0,0,0,0.5);
}
nav ul li.active a {
    background-color: rgba(0,0,0,0.2);
}
nav ul li a:hover {
    background-color: rgba(182, 182, 182, 0.3);
}
nav ul {
    display: none;
    /* background-color: rgba(182, 182, 182, 0.1); */
}

nav ul.open {display: block;}

#hamburgerBtn span:nth-child(1) {display:block;}
#hamburgerBtn span:nth-child(2) {display:none;}

#hamburgerBtn.open span:nth-child(1) {display:none;}
#hamburgerBtn.open span:nth-child(2) {display:block;}

.first {
    display:block;
    display:inline-block;
}
.subnav {
    visibility: hidden;
}
.subnav:hover {
    visibility: visible;
}
  



/* || Footer */
footer{
    color: var(--site-white);
    background-color: var(--site-blue);
    padding: 1em;
    display: grid;
    grid-template-columns: 1fr;
    /* align-items: center; */
    /* text-align: center; */
    /* justify-content: center; */
}
#footer-top {
    /* display: grid; */
    /* grid-template-columns: 1fr; */
}
footer hr{
    width: 100%;
}
footer img {
    justify-self: center;
}
footer iframe{
    max-width: 70%;
    /* max-height: 50%; */
    /* align-self: center; */
    /* text-align: center; */
    /* justify-content: center; */
    justify-self: center;
}


/* || ========== Pages ========== */
main h2, h3, h4 {
    color: var(--site-white);
}

/* || Index Main */

.call-to-action {
    background-image: url(../images/big-sky.webp);
    background-size: cover;
    background-position: center;
    height: 300px;
}
.call-to-action-text {
    margin: 3em;
    align-self: center;
    position: absolute;
    padding: 10px;
    padding-bottom: 2em;
    background-color: var(--site-light-blue);
    border: 1px solid var(--site-grey);
    border-radius: 4px;
}

.action-button {
    background-color: var(--site-white);
    text-decoration: none;
    padding: .7em;
    /* padding-left: 1em;
    padding-right: 1em; */
    margin: 2.5em;
    color: var(--site-dark-blue);
    border: 1px solid var(--site-grey);
    /* width: 50%; */
    /* margin-bottom: 3em; */
    border-radius: 25px;
}
.temple-highlight-text {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.temple-highlight img {
    width: 300px;
}

.weather-forecast div{
    border: 1px solid var(--site-grey);
    margin: 1em;
    border-radius: 4px;
}

.blue-box {
    margin: 1em;
    padding: 1em;
    border: 1px solid var(--site-grey);
    background-color: var(--site-light-blue);
    border-radius: 4px;
}
main h2, h3, h4 {
    color: var(--site-white);
}

/* || Temples Main */
.temple-card {
    margin: 1em;
    padding: 1em;
    border: 1px solid var(--site-grey);
    background-color: var(--site-light-blue);
    border-radius: 4px;
    color: var(--site-white);
}

.temple-card img {
    max-width: 90%;
    box-shadow: 5px 5px 7px var(--site-black);
    margin: 1em;
}

.dropbtn {
    background-color: var(--site-blue);
    padding: 16px;
    font-size: 16px;
    border: none;
    margin: 1em;
    color: var(--site-white)
}
.dropdown {
    position: relative;
    display: inline-block;
}
.dropdown-content {
    display: none;
    position: absolute;
    background-color: var(--site-grey);
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    padding: 1em;
}

.dropdown-content,div,ul,li{
    padding-bottom: 1em;
}
.dropdown:hover .dropdown-content {display: block;}
.dropdown-content a:hover {background-color: #ddd;}
.dropdown:hover .dropbtn {background-color: #3e8e41;}

.likes {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: fit-content;
    margin: auto;
}


/*  || Reservations main */
#reservation-main {
    /* display: grid; */
}

form {
    text-align: left;
    padding: 1em;
    /* display: flexbox; */
    max-width: 600px;
    margin: auto;
}

/* .rooms-section {
    display: inline; 
} */
.dropdown-rooms {
    /* display: inline-block; */
    border: 1px solid var(--site-grey);
    margin: 1em;
    padding: 1em;
    border-radius: 15px;
}

form fieldset {
    margin: 2rem 0;
    border: 5px solid var(--site-grey);
    border-radius: 20px;
    padding: .5rem 2%;
}

form legend {
    color: var(--site-dark-blue);
    margin: 0 1rem;
    padding: 0 .5rem;
}
form label.top, form div {
    display: block;
    padding-top: 1rem;
    color: var(--site-light-blue);
}

form label.top input, form label.top select {
    font-size: 1rem;
    border: solid 1px #999;
    border-radius: 4px;
    padding: .75rem;
    color: #555;
    width: 100%;
    max-width: 18rem;
    background-color: rgba(0,0,0,0.1);
}
textarea {
    width: 90%;
}
form label.sbs {
    display: block;
    padding: .75rem 0;
    color: var(--site-light-blue);
    font-size: 1rem;
}


form input.submitBtn {
    background-color: var(--site-light-blue);
    color: var(--site-black);
    border-radius: 1rem;
    padding: .75rem 1.5rem;
    margin: 0 0 2rem 2%;
    cursor: pointer;
}
form label.top input:required {
    border-left: red solid 6px;
}
form label.top input:required:valid {
    border-left: green solid 6px;
}
input[type=submit]:hover {
    background-color: #45a049;
  }

.custom-select-top {
    display:grid;
    margin-top: 1em;
    margin-bottom: .5em;
    /* max-height: 1em; */
    grid-template-columns: 1fr 1fr;
    text-align: left;
    /* background-color:var(--site-grey); */
    /* color: var(--site-white); */
}




/* || Services Page*/
.services-section {
    margin: 1em;
    padding: 1em;
    border: 1px solid var(--site-grey);
    border-radius: 4px;
}
.services-box {
    margin: 1em;
    padding: 1em;
    border: 1px solid var(--site-grey);
    background-color: var(--site-light-blue);
    border-radius: 4px;
}

.services-box ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.services-box strong {
    color: var(--site-white);
}
.services-links {
    /* display: flex; */
    /* margin: 1em; */
    /* padding: 1em; */
}
.services-links a {
    text-decoration: none;
    background-color: var(--site-grey);
    color: var(--site-white);
    padding: 5px;
    /* margin-top: 2em; */
    /* margin-bottom: 2em; */
    /* border-radius: 1rem; */
    /* background-color: var(--site-light-blue); */
    /* color: var(--site-black); */
    border-radius: 1rem;
    /* padding: .75rem 1.5rem; */
    /* margin: 0 0 2rem 2%; */
    cursor: pointer;
}

